[package]
name = "ol-types"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
bcs = "0.1.2"
diem-types = { path = "../../types/" }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
diem-crypto = { path = "../../crypto/crypto/" }
anyhow = "1.0.33"
ol-keys = { path = "../keys" }
move-core-types = { path = "../../language/move-core/types" }
